adds branch-alias

--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,9 @@
         }
     },
     "extra": {
+        "branch-alias": {
+            "dev-main": "1.0-dev"
+        },
         "laravel": {
             "providers": [
                 "Topoff\\DatabaseDownloader\\DatabaseDownloaderServiceProvider"
